<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.assignment2.Main2Activity"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:onClick="btnClick"
        android:text="@string/rice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="134dp"
        android:text="@string/cheese"
        android:onClick="btnClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="42dp"
        android:text="@string/olive"
        android:onClick="btnClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/butter"
        android:onClick="btnClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="42dp"
        android:text="@string/soup"
        android:onClick="btnClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="42dp"
        android:text="@string/ketchup"
        android:onClick="btnClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
